# wordntle-dev

./: README.md  pyproject.toml
tests/: test_wordntle.py
wordntle/: __init__.py  all_fake_words.txt  allowed_guesses.txt  answers.txt  fake_words.txt  words.txt
