[tool.poetry]
name = "wordntle"
version = "0.1.0"
description = ""
authors = ["Jacob Nesbitt <jjnesbitt2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gibberish = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
